@@ -30,6 +30,16 @@ nohup /opt/sterling/build/agentserver_mod.sh VSIShipmentInvoiceServer "-Xms512m 
 
 nohup /opt/sterling/build/startIntegrationServer.sh VSISTSUpdate "-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m" > /dev/null 2>&1 &
 
+nohup /opt/sterling/build/startIntegrationServer.sh VSISFSShipJDAServer "-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m" > /dev/null 2>&1 &
+
 nohup /opt/sterling/build/agentserver_mod.sh VSIItemBasedAllocation "-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m" > /dev/null 2>&1 &
 
 nohup /opt/sterling/build/startIntegrationServer.sh VSIAckFromJDA "-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m" > /dev/null 2>&1 &
+
+nohup /opt/sterling/build/agentserver_mod.sh VSISTSCancelAgent "-Xms256m -Xmx512m -XX:PermSize=128m -XX:MaxPermSize=256m" > /dev/null 2>&1 &
+
+nohup /opt/sterling/build/startIntegrationServer.sh VSISFSConfirmShpToATG "-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m" > /dev/null 2>&1 &
+
+nohup /opt/sterling/build/startIntegrationServer.sh VSISFSUnPackVoid "-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m" > /dev/null 2>&1 &
+
+nohup /opt/sterling/build/startIntegrationServer.sh VSIStoreUserLoad "-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m" > /dev/null 2>&1 &
